# DocAppoint

./: . dockerignore  .env.ci  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile.ci  Jenkinsfile  Makefile  README.md  docker-compose.ci.backend.yml  docker-compose.override.yml  docker-compose.yml  makefile  package-lock.json  package.json  prometheus.yml
.github/actions/setup-python-poetry/: action.yml
.github/workflows/: ci.yml  old_ci.yml
ansible/: deploy.yml
backend/: Dockerfile  manage.py  mypy.ini  pyproject.toml  pytest.ini
backend/api/: admin.py  apps.py  asgi.py  metrics.py  mixin.py  models.py  permissions.py  serializers.py  services.py  settings.py  urls.py  views.py  wsgi.py
backend/api/management/commands/: handle_slots.py  purge_old_slots.py  seed_providers.py
backend/api/migrations/: 0001_initial.py  0002_alter_speciality_image.py  0002_remove_systemadminprofile_hospital.py  0003_doctor_city_doctor_state_doctor_zip_code.py  0004_customuser_groups_customuser_is_superuser_and_more.py  0005_role.py
backend/api/models/: __init__.py  appointment.py  hospital.py  managers.py  medical.py  message.py  profiles.py  speciality.py  users.py
backend/api/serializers/: __init__.py  admin_staff.py  appointment.py  auth.py  healthcare_provider.py  hospital.py  medical_record.py  patient.py  speciality.py  system_admin.py  user.py
backend/api/services/: appointment.py  auth.py  healthcare_provider.py  signals.py  speciality.py
backend/api/settings/: base.py  development.py  production.py
backend/api/templates/: verify.html  verify.txt
backend/api/tests/: conftest.py  factories.py  test_auth.py  test_models.py  test_views.py
backend/api/tests/admin_staff/: test_model.py  test_serializers.py
backend/api/tests/appointment/: test_integration.py  test_model.py  test_serializers.py  test_view.py  test_views.py
backend/api/tests/auth/: test_integration.py  test_serializers.py  test_views.py
backend/api/tests/healthcare_provider/: test_integration.py  test_model.py  test_serializers.py  test_views.py
backend/api/tests/medical_record/: test_integration.py  test_model.py  test_serializers.py  test_views.py
backend/api/tests/patient/: test_integration.py  test_model.py  test_serializers.py  test_views.py
backend/api/tests/speciality/: test_integration.py  test_model.py  test_serializers.py  test_views.py
backend/api/tests/system_admin/: test_model.py  test_serializers.py
backend/api/tests/user/: test_integration.py  test_model.py  test_serializers.py  test_views.py
backend/api/utils/: case.py  env.py  tokens.py
backend/api/views/: __init__.py  appointment.py  auth.py  health.py  healthcare_provider.py  medical_record.py  patient.py  slot.py  speciality.py  user.py
backend/fixtures/: doctor.json  speciality.json
frontend/: . eslintrc.js  Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/__tests__/: server.ts  setup.ts
frontend/__tests__/integration/: appointmentManagement.integration.test.tsx  booking.test.tsx  cancellation.test.tsx  login.test.tsx  logout.test.tsx  onboarding.integration.test.tsx  onboarding.test.tsx  patientView.test.tsx  profileManagement.integration.test.tsx  profileManagement.test.tsx  providerCreate.test.tsx  providerView.integration.test.tsx  providerView.test.tsx  signup.test.tsx  (+3 more)
frontend/hooks/: useAuth.ts  useDoctor.ts  useSpecialities.ts  useSpeciality.ts
frontend/src/: App.css  App.tsx  main.tsx
frontend/test/: server.ts  utils.tsx
frontend/utils/: errorMap.ts  states.ts
jenkins/: Dockerfile
(+105 files in other folders)
