[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asgiref (>=3.9.1,<4.0.0)",
    "django (>=5.2.5,<6.0.0)",
    "django-filter (>=25.1,<26.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "sqlparse (>=0.5.3,<0.6.0)",
    "typing-extensions (>=4.15.0,<5.0.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
